--- a/mock.conf
+++ b/mock.conf
@@ -1,6 +1,15 @@
 ~^GET /openscan_nextkilde/\?encoding=utf-8&outputType=json&action=openScan~
 dump/openscan_nextkilde.response
 
+~^GET /addi.wsdl~
+dump/addi_wsdl.response
+
+~^GET /bowk.xsd~
+dump/addi_bowk_xsd.response
+
+~^POST /soap~
+dump/addi_additional_information.response
+
 ~^GET /addi_get.php\?id=.*&type=forside_stor~
 dump/addi_get.response
 
