Replaced some reponses from ninja to nors

--- a/mock.conf
+++ b/mock.conf
@@ -13,6 +13,9 @@ dump/addi_additional_information.response
 ~^GET /addi_get.php\?id=.*&type=forside_stor~
 dump/addi_get.response
 
+~^GET /adhl/\?encoding=utf-8&action=ADHLRequest&outputType=json~
+dump/openadhl.response
+
 ~^GET /opensearch_gentofte/\?encoding=utf-8&action=search&outputType=json~
 dump/opensearch_gentofte.response
 
