Added mocks for alma

--- a/mock.conf
+++ b/mock.conf
@@ -24,3 +24,9 @@ dump/opensearch_gentofte_record.response
 
 ~^GET /openspell_nextkilde/\?encoding=utf-8&action=openSpell&outputType=json~
 dump/openspell_nextkilde.response
+
+~^GET /alma/catalogue/detail\?catalogueRecordKey=~
+dump/alma_catalogue_detail.response
+
+~^GET /alma/catalogue/availability\?catalogueRecordKey=~
+dump/alma_catalogue_availability.response
