respond with input faust nr

--- a/mock.conf
+++ b/mock.conf
@@ -1,5 +1,5 @@
 ~^GET /openscan_nextkilde/\?encoding=utf-8&outputType=json&action=openScan~
-dump/openscan_nextkilde.response
+dump/openscan_13.response
 
 ~^GET /addi.wsdl~
 dump/addi_wsdl.response
@@ -8,7 +8,7 @@ dump/addi_wsdl.response
 dump/addi_bowk_xsd.response
 
 ~^POST /soap~
-dump/addi_additional_information.response
+dump/addi_additional_information.response.php
 
 ~^GET /addi_get.php\?id=.*&type=forside_stor~
 dump/addi_get.response
