Lots of alma mocks

--- a/mock.conf
+++ b/mock.conf
@@ -30,3 +30,19 @@ dump/alma_catalogue_detail.response
 
 ~^GET /alma/catalogue/availability\?catalogueRecordKey=~
 dump/alma_catalogue_availability.response
+
+~^GET /alma/organisation/branches~
+dump/alma_organisation_branches.response
+
+~^GET /alma/organisation/collections~
+dump/alma_organisation_collections.response
+
+~^GET /alma/organisation/departments~
+dump/alma_organisation_departments.response
+
+~^GET /alma/organisation/locations~
+dump/alma_organisation_locations.response
+
+~^GET /alma/organisation/subLocations~
+dump/alma_organisation_sub_locations.response
+
