Cleaned names up and updated content of autocompleter

--- a/mock.conf
+++ b/mock.conf
@@ -1,5 +1,5 @@
-~^GET /openscan_nextkilde/\?encoding=utf-8&outputType=json&action=openScan~
-dump/openscan_13.response
+~^GET /openscan/\?encoding=utf-8&outputType=json&action=openScan&field=phrase.anyIndexes&limit=10&lower=~
+dump/openscan.response
 
 ~^GET /addi.wsdl~
 dump/addi_wsdl.response
@@ -16,14 +16,14 @@ dump/addi_get.response
 ~^GET /adhl/\?encoding=utf-8&action=ADHLRequest&outputType=json~
 dump/openadhl.response
 
-~^GET /opensearch_gentofte/\?encoding=utf-8&action=search&outputType=json~
-dump/opensearch_gentofte.response
+~^GET /opensearch/\?encoding=utf-8&action=search&outputType=json~
+dump/opensearch.response
 
-~^GET /opensearch_gentofte/\?encoding=utf-8&action=search&outputType=json&query=rec.id~
-dump/opensearch_gentofte_record.response
+~^GET /opensearch/\?encoding=utf-8&action=search&outputType=json&query=rec.id~
+dump/opensearch_record.response
 
-~^GET /openspell_nextkilde/\?encoding=utf-8&action=openSpell&outputType=json~
-dump/openspell_nextkilde.response
+~^GET /openspell/\?encoding=utf-8&action=openSpell&outputType=json~
+dump/openspell.response
 
 ~^GET /alma/catalogue/detail\?catalogueRecordKey=~
 dump/alma_catalogue_detail.response
