Changed rule to match on scan limit 1

--- a/mock.conf
+++ b/mock.conf
@@ -1,4 +1,4 @@
-~^GET /openscan/\?encoding=utf-8&outputType=json&action=openScan&field=phrase.anyIndexes&limit=10&lower=~
+~^GET /openscan/\?encoding=utf-8&outputType=json&action=openScan&field=phrase.anyIndexes~
 dump/openscan.response
 
 ~^GET /addi.wsdl~
