Added a collection sample

--- a/mock.conf
+++ b/mock.conf
@@ -16,11 +16,14 @@ dump/addi_get.response
 ~^GET /adhl/\?encoding=utf-8&action=ADHLRequest&outputType=json~
 dump/openadhl.response
 
-~^GET /opensearch/\?encoding=utf-8&action=search&outputType=json~
-dump/opensearch.response
+~^GET /opensearch/\?encoding=utf-8&action=search&outputType=json&query=rec.id%3D715700%3A28116829&stepValue=1&allObjects=1~
+dump/opensearch_record_collection.response
 
 ~^GET /opensearch/\?encoding=utf-8&action=search&outputType=json&query=rec.id~
 dump/opensearch_record.response
+
+~^GET /opensearch/\?encoding=utf-8&action=search&outputType=json~
+dump/opensearch.response
 
 ~^GET /openspell/\?encoding=utf-8&action=openSpell&outputType=json~
 dump/openspell.response
